# autocppilot

./: CMakeLists.txt
.cache/clangd/index/: main.cpp.BEF168732372029F.idx
src/: main.cpp
